crates/cockpitctl-render/tests/snapshots/snapshot_budget_tests__render_fifty_findings.snap
---
source: crates/cockpitctl-render/tests/snapshot_budget_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` |

### Highlights

(showing up to **50**)

1. ⚠️ **scanner**: `SEC-001` at `src/file_1.rs:1` — Finding SEC-001 from scanner
2. ℹ️ **scanner**: `SEC-002` at `src/file_2.rs:2` — Finding SEC-002 from scanner
3. ❌ **scanner**: `SEC-003` at `src/file_3.rs:3` — Finding SEC-003 from scanner
4. ⚠️ **scanner**: `SEC-004` at `src/file_4.rs:4` — Finding SEC-004 from scanner
5. ℹ️ **scanner**: `SEC-005` at `src/file_5.rs:5` — Finding SEC-005 from scanner
6. ❌ **scanner**: `SEC-006` at `src/file_6.rs:6` — Finding SEC-006 from scanner
7. ⚠️ **scanner**: `SEC-007` at `src/file_7.rs:7` — Finding SEC-007 from scanner
8. ℹ️ **scanner**: `SEC-008` at `src/file_8.rs:8` — Finding SEC-008 from scanner
9. ❌ **scanner**: `SEC-009` at `src/file_9.rs:9` — Finding SEC-009 from scanner
10. ⚠️ **scanner**: `SEC-010` at `src/file_10.rs:10` — Finding SEC-010 from scanner
11. ℹ️ **scanner**: `SEC-011` at `src/file_11.rs:11` — Finding SEC-011 from scanner
12. ❌ **scanner**: `SEC-012` at `src/file_12.rs:12` — Finding SEC-012 from scanner
13. ⚠️ **scanner**: `SEC-013` at `src/file_13.rs:13` — Finding SEC-013 from scanner
14. ℹ️ **scanner**: `SEC-014` at `src/file_14.rs:14` — Finding SEC-014 from scanner
15. ❌ **scanner**: `SEC-015` at `src/file_15.rs:15` — Finding SEC-015 from scanner
16. ⚠️ **scanner**: `SEC-016` at `src/file_16.rs:16` — Finding SEC-016 from scanner
17. ℹ️ **scanner**: `SEC-017` at `src/file_17.rs:17` — Finding SEC-017 from scanner
18. ❌ **scanner**: `SEC-018` at `src/file_18.rs:18` — Finding SEC-018 from scanner
19. ⚠️ **scanner**: `SEC-019` at `src/file_19.rs:19` — Finding SEC-019 from scanner
20. ℹ️ **scanner**: `SEC-020` at `src/file_20.rs:20` — Finding SEC-020 from scanner
21. ❌ **scanner**: `SEC-021` at `src/file_21.rs:21` — Finding SEC-021 from scanner
22. ⚠️ **scanner**: `SEC-022` at `src/file_22.rs:22` — Finding SEC-022 from scanner
23. ℹ️ **scanner**: `SEC-023` at `src/file_23.rs:23` — Finding SEC-023 from scanner
24. ❌ **scanner**: `SEC-024` at `src/file_24.rs:24` — Finding SEC-024 from scanner
25. ⚠️ **scanner**: `SEC-025` at `src/file_25.rs:25` — Finding SEC-025 from scanner
26. ℹ️ **scanner**: `SEC-026` at `src/file_26.rs:26` — Finding SEC-026 from scanner
27. ❌ **scanner**: `SEC-027` at `src/file_27.rs:27` — Finding SEC-027 from scanner
28. ⚠️ **scanner**: `SEC-028` at `src/file_28.rs:28` — Finding SEC-028 from scanner
29. ℹ️ **scanner**: `SEC-029` at `src/file_29.rs:29` — Finding SEC-029 from scanner
30. ❌ **scanner**: `SEC-030` at `src/file_30.rs:30` — Finding SEC-030 from scanner
31. ⚠️ **scanner**: `SEC-031` at `src/file_31.rs:31` — Finding SEC-031 from scanner
32. ℹ️ **scanner**: `SEC-032` at `src/file_32.rs:32` — Finding SEC-032 from scanner
33. ❌ **scanner**: `SEC-033` at `src/file_33.rs:33` — Finding SEC-033 from scanner
34. ⚠️ **scanner**: `SEC-034` at `src/file_34.rs:34` — Finding SEC-034 from scanner
35. ℹ️ **scanner**: `SEC-035` at `src/file_35.rs:35` — Finding SEC-035 from scanner
36. ❌ **scanner**: `SEC-036` at `src/file_36.rs:36` — Finding SEC-036 from scanner
37. ⚠️ **scanner**: `SEC-037` at `src/file_37.rs:37` — Finding SEC-037 from scanner
38. ℹ️ **scanner**: `SEC-038` at `src/file_38.rs:38` — Finding SEC-038 from scanner
39. ❌ **scanner**: `SEC-039` at `src/file_39.rs:39` — Finding SEC-039 from scanner
40. ⚠️ **scanner**: `SEC-040` at `src/file_40.rs:40` — Finding SEC-040 from scanner
41. ℹ️ **scanner**: `SEC-041` at `src/file_41.rs:41` — Finding SEC-041 from scanner
42. ❌ **scanner**: `SEC-042` at `src/file_42.rs:42` — Finding SEC-042 from scanner
43. ⚠️ **scanner**: `SEC-043` at `src/file_43.rs:43` — Finding SEC-043 from scanner
44. ℹ️ **scanner**: `SEC-044` at `src/file_44.rs:44` — Finding SEC-044 from scanner
45. ❌ **scanner**: `SEC-045` at `src/file_45.rs:45` — Finding SEC-045 from scanner
46. ⚠️ **scanner**: `SEC-046` at `src/file_46.rs:46` — Finding SEC-046 from scanner
47. ℹ️ **scanner**: `SEC-047` at `src/file_47.rs:47` — Finding SEC-047 from scanner
48. ❌ **scanner**: `SEC-048` at `src/file_48.rs:48` — Finding SEC-048 from scanner
49. ⚠️ **scanner**: `SEC-049` at `src/file_49.rs:49` — Finding SEC-049 from scanner
50. ℹ️ **scanner**: `SEC-050` at `src/file_50.rs:50` — Finding SEC-050 from scanner

### Annotations

1. ❌ **scanner**: `SEC-012` at `src/file_12.rs:12` — Finding SEC-012 from scanner
2. ❌ **scanner**: `SEC-015` at `src/file_15.rs:15` — Finding SEC-015 from scanner
3. ❌ **scanner**: `SEC-018` at `src/file_18.rs:18` — Finding SEC-018 from scanner
4. ❌ **scanner**: `SEC-021` at `src/file_21.rs:21` — Finding SEC-021 from scanner
5. ❌ **scanner**: `SEC-024` at `src/file_24.rs:24` — Finding SEC-024 from scanner
6. ❌ **scanner**: `SEC-027` at `src/file_27.rs:27` — Finding SEC-027 from scanner
7. ❌ **scanner**: `SEC-003` at `src/file_3.rs:3` — Finding SEC-003 from scanner
8. ❌ **scanner**: `SEC-030` at `src/file_30.rs:30` — Finding SEC-030 from scanner
9. ❌ **scanner**: `SEC-033` at `src/file_33.rs:33` — Finding SEC-033 from scanner
10. ❌ **scanner**: `SEC-036` at `src/file_36.rs:36` — Finding SEC-036 from scanner
11. ❌ **scanner**: `SEC-039` at `src/file_39.rs:39` — Finding SEC-039 from scanner
12. ❌ **scanner**: `SEC-042` at `src/file_42.rs:42` — Finding SEC-042 from scanner
13. ❌ **scanner**: `SEC-045` at `src/file_45.rs:45` — Finding SEC-045 from scanner
14. ❌ **scanner**: `SEC-048` at `src/file_48.rs:48` — Finding SEC-048 from scanner
15. ❌ **scanner**: `SEC-006` at `src/file_6.rs:6` — Finding SEC-006 from scanner
16. ❌ **scanner**: `SEC-009` at `src/file_9.rs:9` — Finding SEC-009 from scanner
17. ⚠️ **scanner**: `SEC-001` at `src/file_1.rs:1` — Finding SEC-001 from scanner
18. ⚠️ **scanner**: `SEC-010` at `src/file_10.rs:10` — Finding SEC-010 from scanner
19. ⚠️ **scanner**: `SEC-013` at `src/file_13.rs:13` — Finding SEC-013 from scanner
20. ⚠️ **scanner**: `SEC-016` at `src/file_16.rs:16` — Finding SEC-016 from scanner
21. ⚠️ **scanner**: `SEC-019` at `src/file_19.rs:19` — Finding SEC-019 from scanner
22. ⚠️ **scanner**: `SEC-022` at `src/file_22.rs:22` — Finding SEC-022 from scanner
23. ⚠️ **scanner**: `SEC-025` at `src/file_25.rs:25` — Finding SEC-025 from scanner
24. ⚠️ **scanner**: `SEC-028` at `src/file_28.rs:28` — Finding SEC-028 from scanner
25. ⚠️ **scanner**: `SEC-031` at `src/file_31.rs:31` — Finding SEC-031 from scanner
26. ⚠️ **scanner**: `SEC-034` at `src/file_34.rs:34` — Finding SEC-034 from scanner
27. ⚠️ **scanner**: `SEC-037` at `src/file_37.rs:37` — Finding SEC-037 from scanner
28. ⚠️ **scanner**: `SEC-004` at `src/file_4.rs:4` — Finding SEC-004 from scanner
29. ⚠️ **scanner**: `SEC-040` at `src/file_40.rs:40` — Finding SEC-040 from scanner
30. ⚠️ **scanner**: `SEC-043` at `src/file_43.rs:43` — Finding SEC-043 from scanner
31. ⚠️ **scanner**: `SEC-046` at `src/file_46.rs:46` — Finding SEC-046 from scanner
32. ⚠️ **scanner**: `SEC-049` at `src/file_49.rs:49` — Finding SEC-049 from scanner
33. ⚠️ **scanner**: `SEC-007` at `src/file_7.rs:7` — Finding SEC-007 from scanner
34. ℹ️ **scanner**: `SEC-011` at `src/file_11.rs:11` — Finding SEC-011 from scanner
35. ℹ️ **scanner**: `SEC-014` at `src/file_14.rs:14` — Finding SEC-014 from scanner
36. ℹ️ **scanner**: `SEC-017` at `src/file_17.rs:17` — Finding SEC-017 from scanner
37. ℹ️ **scanner**: `SEC-002` at `src/file_2.rs:2` — Finding SEC-002 from scanner
38. ℹ️ **scanner**: `SEC-020` at `src/file_20.rs:20` — Finding SEC-020 from scanner
39. ℹ️ **scanner**: `SEC-023` at `src/file_23.rs:23` — Finding SEC-023 from scanner
40. ℹ️ **scanner**: `SEC-026` at `src/file_26.rs:26` — Finding SEC-026 from scanner
41. ℹ️ **scanner**: `SEC-029` at `src/file_29.rs:29` — Finding SEC-029 from scanner
42. ℹ️ **scanner**: `SEC-032` at `src/file_32.rs:32` — Finding SEC-032 from scanner
43. ℹ️ **scanner**: `SEC-035` at `src/file_35.rs:35` — Finding SEC-035 from scanner
44. ℹ️ **scanner**: `SEC-038` at `src/file_38.rs:38` — Finding SEC-038 from scanner
45. ℹ️ **scanner**: `SEC-041` at `src/file_41.rs:41` — Finding SEC-041 from scanner
46. ℹ️ **scanner**: `SEC-044` at `src/file_44.rs:44` — Finding SEC-044 from scanner
47. ℹ️ **scanner**: `SEC-047` at `src/file_47.rs:47` — Finding SEC-047 from scanner
48. ℹ️ **scanner**: `SEC-005` at `src/file_5.rs:5` — Finding SEC-005 from scanner
49. ℹ️ **scanner**: `SEC-050` at `src/file_50.rs:50` — Finding SEC-050 from scanner
50. ℹ️ **scanner**: `SEC-008` at `src/file_8.rs:8` — Finding SEC-008 from scanner

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json`

<!-- cockpit:end -->
