crates/cockpitctl-render/tests/snapshots/snapshot_budget_tests__render_five_findings.snap
---
source: crates/cockpitctl-render/tests/snapshot_budget_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` |

### Highlights

(showing up to **5**)

1. ❌ **scanner**: `SEC-001` at `src/file_1.rs:1` — Finding SEC-001 from scanner
2. ❌ **scanner**: `SEC-002` at `src/file_2.rs:2` — Finding SEC-002 from scanner
3. ⚠️ **scanner**: `SEC-003` at `src/file_3.rs:3` — Finding SEC-003 from scanner
4. ⚠️ **scanner**: `SEC-004` at `src/file_4.rs:4` — Finding SEC-004 from scanner
5. ℹ️ **scanner**: `SEC-005` at `src/file_5.rs:5` — Finding SEC-005 from scanner

### Annotations

1. ❌ **scanner**: `SEC-001` at `src/file_1.rs:1` — Finding SEC-001 from scanner
2. ❌ **scanner**: `SEC-002` at `src/file_2.rs:2` — Finding SEC-002 from scanner
3. ⚠️ **scanner**: `SEC-003` at `src/file_3.rs:3` — Finding SEC-003 from scanner
4. ⚠️ **scanner**: `SEC-004` at `src/file_4.rs:4` — Finding SEC-004 from scanner
5. ℹ️ **scanner**: `SEC-005` at `src/file_5.rs:5` — Finding SEC-005 from scanner

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json`

<!-- cockpit:end -->
