crates/cockpitctl-render/tests/snapshots/snapshot_budget_tests__render_one_finding.snap
---
source: crates/cockpitctl-render/tests/snapshot_budget_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` |

### Highlights

(showing up to **1**)

1. ❌ **scanner**: `SEC-001` at `src/file_1.rs:1` — Finding SEC-001 from scanner

### Annotations

1. ❌ **scanner**: `SEC-001` at `src/file_1.rs:1` — Finding SEC-001 from scanner

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json`

<!-- cockpit:end -->
