crates/cockpitctl-render/tests/snapshots/snapshot_budget_tests__render_zero_budget.snap
---
source: crates/cockpitctl-render/tests/snapshot_budget_tests.rs
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json`

<!-- cockpit:end -->
